[package]
name = "fme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
audiotags = "0.4.1"
clap = { version = "4.4.6", features = ["derive"] }
clap_complete = "4.4.3"
id3 = "1.8.0"
metaflac = "0.2.5"
mp4ameta = "0.11.0"

